<resources>

    <integer name="com_vk_sdk_AppId">5628786</integer>
    <string name="vk_secret">EGCwrEfpvx9spE8UqMhl</string>
    <string name="facebook_app_id">608530889329957</string>
    <string name="twitter_key">tLC6tYpUnOBLXzKkJ7TOYZjYq</string>
    <string name="twitter_secret_key">T4PHDWa1Z4Un8sJdVNnhsStYOOLvYsLGHzPMje8I4s6x0agn26</string>
    <string name="twitter_access_token">772785250644680705-XNgUtT4HaohfPWYDSq4GR4BEeO3C5As</string>
    <string name="twitter_access_token_secret">fGbrEaJhbwVnvjQ25EJ3jLe9lIw9kysXX1BEuP2hbtZlq</string>


    <string name="app_name">Revizor2</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_free_play">Free Play</string>
    <string name="drawer_item_custom">Custom</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_help">Help</string>
    <string name="drawer_item_open_source">Open Source</string>
    <string name="drawer_item_contact">Contact</string>

    <string name="menu_map">Карта Ревізора</string>
    <string name="menu_ribbon">Стрічка</string>
    <string name="menu_places">Місця</string>
    <string name="menu_revision">Ревізії Ревізора</string>
    <string name="menu_p_revision">Народні ревізії</string>
    <string name="menu_invites">Запрошення</string>
    <string name="menu_profile">Профіль</string>
    <string name="menu_terms">Умови конкурсу</string>

    <string name="ad_domestos">Доместос - Вбиває мікроби всюди</string>
    <string name="places_arround">Показати місця поруч зі мною</string>
    <string name="places_restourant">Кафе, ресторани</string>
    <string name="places_hotels">Готелі</string>
    <string name="places_ribbon">Стрічка</string>

    <string name="terms_text_one">Проводьте власні ревезії!</string>
    <string name="terms_text_two">Заробляйте бали!</string>
    <string name="terms_text_three">Отримуйте статус - Аудитор чистоти, \n та подарунки від нашого спонсора!</string>
    <string name="terms_text_four">Умови конкурсу. Детальніше</string>


</resources>
